feat: arrow and floating text styling

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -162,18 +162,22 @@
 .floating-text {
   position: absolute;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: float 3s ease-out forwards;
+  right: 0;
+  transform: translateX(90%);
+  animation: float 5s ease-out forwards;
 }
 
 @keyframes float {
   0% {
+    transform: translateX(90%);
     opacity: 1;
-    transform: translate(-50%, 0);
+  }
+  75% {
+    transform: translate(90%, -5px);
+    opacity: 1;
   }
   100% {
     opacity: 0;
-    transform: translate(-50%, -50px);
+    transform: translate(90%, -30px);
   }
 }
