--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,3 +1,7 @@
+@import "@fontsource/space-mono";
+@import "@fontsource/space-mono/700.css";
+@import "@fontsource/silkscreen/400.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
